--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,11 @@ main{
     margin-left: 180px;
 }
 
+.text-area{
+    height: 400px;
+    border: none;
+    color: #0A3871;
+    margin-top: 30px;
+    padding: 2px;
+    text-transform: lowercase;
+}
