--- a/styles.css
+++ b/styles.css
@@ -67,3 +67,13 @@ main{
     margin-left: 30px;
     width: 328px;
 }
+
+.btn-encriptar {
+    background-color: #0A3871;
+    border: 1px solid #0A3871;
+    border-radius: 24px;
+    color: white;
+    cursor: pointer;
+    height: 67px;
+    width: 328px;
+}
