--- a/styles.css
+++ b/styles.css
@@ -77,3 +77,15 @@ main{
     height: 67px;
     width: 328px;
 }
+
+.copiar {
+    border: 1px solid #0A3871;
+    border-radius: 24px;
+    color: #0A3871;
+    cursor: pointer;
+    height: 67px;
+    margin-left: 120px;
+    margin-top: 565px;
+    position: absolute;
+    width: 336px;
+}
