--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 *{
     background: #F3F5FC;
-    font-family: 'inter';
+    font-family: 'Inter';
     font-weight: 400;
     font-size: 32px;
     line-height: 150%;
