--- a/style.css
+++ b/style.css
@@ -3,9 +3,7 @@
     font-family: 'Inter';
     font-weight: 400;
     font-size: 32px;
-    line-height: 150%;
-    overflow-y: hidden;
-    
+    line-height: 150%;    
 }
 
 .logo{
@@ -103,3 +101,58 @@ footer#pie {
   padding: 10px; 
   text-align: left; 
 }
+
+/* Estilos generales */
+
+/* Estilos para pantallas pequeñas */
+@media screen and (max-width: 768px) {
+    .logo {
+      width: 30%;
+    }
+    main {
+      flex-direction: column;
+      margin-left: 0;
+    }
+    .text-area {
+      margin-top: 10px;
+      width: 90%;
+    }
+    .mensaje {
+      margin-left: 0;
+      margin-top: 20px;
+      width: 90%;
+    }
+    .botones {
+      flex-direction: column;
+      align-items: center;
+    }
+    .btn-desencriptar,
+    .btn-encriptar,
+    .copiar {
+      width: 90%;
+      margin-left: 0;
+      margin-top: 10px;
+    }
+  }
+  
+  /* Estilos para pantallas medianas y grandes */
+  @media screen and (min-width: 768px) {
+    .logo {
+      width: 10%;
+    }
+    main {
+      margin-left: 180px;
+    }
+    .text-area {
+      margin-top: 30px;
+    }
+    .mensaje {
+      margin-left: 98px;
+      margin-top: 0;
+    }
+    .copiar {
+      margin-left: 120px;
+      margin-top: 565px;
+    }
+  }
+  
