--- a/style.css
+++ b/style.css
@@ -168,3 +168,15 @@ footer#pie {
     }
     
   }
+
+  @media screen and (min-width: 769px) {
+    .copiar{
+        position: obsolute;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 336px;
+        margin: 0;
+        margin-right: 30;
+    
+  }
